[project]
name = "multi-source-research-aggregator"
version = "0.1.0"
description = "A Python script that aggregates research papers from multiple sources"
authors = [
    {name = "Jesus Dominguez",email = "k1214757@kcl.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.13.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry]
package-mode = false


[project.scripts]
research-aggregator = "research_aggregator:cli_main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
